# ph-randomizer

./: .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  3ds.sh  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  extract_item_sprites.py  ph_rando.spec  pyproject.toml  randomizer.py  randomizer.spec  renovate.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: generate_desmume_test_jobs.py  generate_desmume_test_jobs.sh
.github/workflows/: build-test-release.yml  ci.yml  clear-cache.yml  logic-graph-viz.yml  main.yml  pre-commit-autoupdate.yml  release.yml  test-logic.yml  test.yml
Dungeons/Courage Temple/: CourageTemple.logic  CraykBossRoom.logic
Dungeons/Fire Temple/: FireTemple.logic
Dungeons/Goron Temple/: GoronTemple.logic
Dungeons/Ice Temple/: IceTemple.logic
Dungeons/ToTOK/Dungeon/: TempleOfTheOceanKingB0.logic  TempleOfTheOceanKingB2.logic  TempleOfTheOceanKingB3.logic  TempleOfTheOceanKingB4.logic  TempleOfTheOceanKingB5.logic  TempleOfTheOceanKingB6.logic  TempleOfTheOceanKingB6SunMapRoom.logic
NE Sea/MazeIsland/: MazeIsland.logic
NW Sea/Bannan Island/: Bannan.logic
NW Sea/Isle of Gust/: GustIsle.logic
SE Sea/Dee Ess Island/: DSIsland.logic
SE Sea/Goron Island/: Goron.logic
SE Sea/Harrow Island/: Harrow.logic
SE Sea/HoHoBoat/: HoHoBoat.logic
SE Sea/Isle of Frost/: FrostIsle.logic
SW Sea/Cannon Island/: Cannon.logic  CannonGrotto.logic
SW Sea/Isle of Ember/: Ember.logic
SW Sea/Mercay Island/: Mercay.logic
SW Sea/Molida Island/: Molida.logic
SW Sea/Spirit Isle/: SpiritIsle.logic
base/: Dockerfile  Makefile  README.md  build.py  extract_overlay.py  extract_rom.py  fix_y9.py  rebuild_rom.py  requirements.txt  title_screen.py  unpack.py
base/asm/: main.asm
base/asm/include/: faster_boat.asm
base/build_scripts/: build.py  common.py
base/code/: _additional_tree_items.asm  _data.asm  _flags.c  _flags.h  _island_shop_files.asm  _item_model_mapping.c  custom_salvage_item.c  custom_salvage_item.cpp  extend_RUPY_npc.cpp  extend_give_item_function.c  extend_give_item_function.cpp  faster_boat.cpp  fixed_random_treasure_in_shop.c  fixed_random_treasure_in_shop.cpp  get_item_model.c  get_item_model.cpp  main.asm  ph.asm  ph.h  ph.hpp  preprocess.py  progressive_sword_check.c  progressive_sword_check.cpp  rando_settings.cpp  rando_settings.h  set_initial_flags.c  set_initial_flags.cpp  set_starting_items.c  spawn_custom_freestanding_item.c  spawn_custom_freestanding_item.cpp
base/data/: _actors.py  _title_screen.py  _zmb_patches.py  data_patcher.py
base/misc/: title_screen.py
base/src/: _additional_tree_items.asm  _island_shop_files.asm  execute_npc_spawner.c  extend_RUPY_npc.c  faster_boat.c  flags.h  get_npc_model_offset.c  main.asm  ph.asm  ph.h  progressive_sword_check.c  rando_settings.c  rando_settings.h  set_initial_flags.c  spawn_custom_freestanding_item.c
base/src/include/: init_flags.asm
logic/Dungeons/Courage Temple/: CourageTemple.logic
logic/Dungeons/Fire Temple/: BlaazBossRoom.logic
logic/Dungeons/ToTOK/Dungeon/: TempleOfTheOceanKingB2.logic  TempleOfTheOceanKingB3.logic  TempleOfTheOceanKingB3ChartRoom.logic
logic/Dungeons/ToTOK/Lobby/: TempleOfTheOceanKingLobby.logic
logic/SE Sea/Goron Island/: Goron.logic
logic/SW Sea/Cannon Island/: CannonGrotto.logic
logic/SW Sea/Mercay Island/: Mercay.logic  MercayGrotto.logic
logic/SW Sea/Spirit Isle/: SpiritIsle.logic
patcher/: __init__.py  _items.py  _util.py  example.py  items.py  locations.py  main.py  patcher.py  settings.py  util.py
patcher/location_types/: __init__.py  _location.py  dig_spot.py  event.py  island_shop.py  map_object.py  salvage_treasure.py
ph_rando/: __init__.py  common.py  settings.json  settings.py  settings.yaml  settings_schema.json
ph_rando/patcher/: __init__.py  _bmgs.py  _items.py  _patcher.py  _settings.py  _util.py  main.py
ph_rando/patcher/location_types/: _location.py  dig_spot.py  event.py  salvage_treasure.py
ph_rando/shuffler/: __init__.py  _constants.py  _descriptors.py  _parser.py  _settings.py  _shuffler.py  _spoiler_log.py  _util.py  aux_models.py  aux_schema.json  enemies.json  graphviz.py  logic.py  logic_to_aux.py  macros.json  mail.json  main.py
ph_rando/shuffler/logic/: Mail.json  Mail.logic  Sea.json  Sea.logic
ph_rando/shuffler/logic/Shops/: Beedle.json  Beedle.logic  MercayMolida.json  MercayMolida.logic
ph_rando/ui/: cli.py  gui.py  main.py
scripts/: dump_zmb.py  generate_from_spoiler_log.py  generate_maps.py  graphviz.py  logic_to_aux.py
shuffler/: __init__.py  _parser.py  aux-schema.json  aux_models.py  aux_schema.json  enemies.json  graphviz.py  logic.py  logic_to_aux.py  main.py  parser.py  shuffler.py
shuffler/auxiliary/: Sea.json  Sea.wip-json  aux-schema.json
shuffler/auxiliary/Dungeons/Courage Temple/: CourageTemple.json  CourageTemple.wip-json  CraykBossRoom.json  CraykBossRoom.wip-json
shuffler/logic/: Sea.json  Sea.logic
test/: conftest.py  test_boot.py
tests/: README.md  conftest.py  desmume_utils.py  helpers.py  test_boot.py  test_desmume.py  test_logic.py  test_shuffler.py  utils.py
tests/desmume/: conftest.py  desmume.py  desmume_utils.py  emulator_utils.py  melonds.py  test_chest_items.py  test_dig_spot_items.py  test_flags_and_settings.py  test_intro.py  test_minigame_reward_chests.py  test_playthrough_1.py  test_progressive_sword.py  test_salvage_items.py  test_shop_items.py
tests/desmume/test_data/: config.ini  test_custom_dig_spot_items.dsv  test_custom_salvage_items.dsv  test_mercay_1.dsv  test_minigame_reward_chests.dsv  test_progressive_sword.dsv
tests/test_data/: test_custom_shop_items.dsv
tests/test_data/basic/: test.json  test.logic
tests/test_data/chest_content/: test.json  test.logic
tests/test_data/edge_directions_test/: test.json  test.logic
tests/test_data/flag_test/: test.json  test.logic
tests/test_data/key_test/: test.json  test.logic
tests/test_data/state_test/: test.json  test.logic
(+519 files in other folders)
