[project]
name = "ph_rando"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "PySide6==6.6.0",
    "click==8.1.3",
    "inflection==0.5.1",
    "ndspy==4.1.0",
    "ordered-set==4.1.0",
    "pydantic==2.4.2",
    "pyparsing==3.1.1",
    "vidua==0.4.5",
    "zed@git+https://github.com/phst-randomizer/zed.git@5ee969236bf3c3d0707da963e5edc818ddf246d3",
]

[project.optional-dependencies]
test = [
    "PyYAML==6.0.1",
    "numpy~=1.26.1",
    "opencv-python~=4.7.0.68",
    "py-desmume==0.0.6",
    "pytest~=7.4.2",
    "pytest-repeat~=0.9.1",
    "pytest-xdist~=3.3.0",
    "tqdm~=4.66.1",
]
types = [
    "mypy==1.6.1",
    "types-Pillow~=10.1.0.0",
    "types-PyYAML~=6.0.12.8",
    "types-setuptools~=68.2.0.0",
    "types-tqdm~=4.66.0.1",
]

[project.scripts]
ph_rando = "ph_rando.ui.main:main"
ph_rando_shuffler = "ph_rando.shuffler.main:shuffler_cli"
ph_rando_patcher = "ph_rando.patcher.main:patcher_cli"

[build-system]
requires = ["setuptools>68", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ph_rando"]

[tool.setuptools_scm]

[tool.black]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|dist'
line-length = 100
skip-string-normalization = true
target-version = ["py312"]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 100
profile = "black"

# Require all Python code to be typed by default.
[tool.mypy]
disallow_untyped_defs = true

# Allow untyped definitions for test code.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# These third-party libraries don't expose type information,
# so we tell mypy not to try to type-check our usage of them.
[[tool.mypy.overrides]]
module = ['cv2.*', 'desmume.*', 'ndspy.*', 'zed.*']
ignore_missing_imports = true
