[project]
name = "ph_rando"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "PySide6==6.8.1",
    "click==8.1.8",
    "inflection==0.5.1",
    "ndspy@git+https://github.com/mike8699/ndspy.git@9d80480e8a3d65a389aac6f5d10978bd9113c977",
    "ordered-set==4.1.0",
    "pydantic==2.10.4",
    "pyparsing==3.2.0",
    "vidua==0.4.5",
    "zed@git+https://github.com/phst-randomizer/zed.git@e59a9653ea1344cbc147bab446821813200b9d19",
]

[project.optional-dependencies]
test = [
    "PyYAML==6.0.2",
    "numpy~=1.26.1",
    "opencv-python~=4.7.0.68",
    "pytesseract~=0.3.13",
    "pytest~=8.3.4",
    "pytest-repeat~=0.9.3",
    "pytest-rerunfailures~=15.0",
    "pytest-xdist~=3.6.1",
    "tqdm~=4.67.1",
]
desmume = [
    "py-desmume==0.0.7",
    "birds-eye-lib@git+https://github.com/SkiHatDuckie/birds-eye.git@662d148c80830e8399e7025ba92fa44da01afa1c",
]
types = [
    "mypy==1.14.0",
    "types-Pillow~=10.2.0.20240822",
    "types-PyYAML~=6.0.12.20241221",
    "types-setuptools~=75.6.0.20241223",
    "types-tqdm~=4.67.0.20241221",
]
pyinstaller = ["pyinstaller==6.11.1"]

[project.scripts]
ph_rando = "ph_rando.ui.main:main"
ph_rando_shuffler = "ph_rando.shuffler.main:shuffler_cli"
ph_rando_patcher = "ph_rando.patcher.main:patcher_cli"

[build-system]
requires = ["setuptools>68", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ph_rando"]

[tool.setuptools_scm]

[tool.black]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|dist'
line-length = 100
skip-string-normalization = true
target-version = ["py312"]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 100
profile = "black"

# Require all Python code to be typed by default.
[tool.mypy]
disallow_untyped_defs = true

# Allow untyped definitions for test code.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# These third-party libraries don't expose type information,
# so we tell mypy not to try to type-check our usage of them.
[[tool.mypy.overrides]]
module = [
    'birdseyelib.*',
    'cv2.*',
    'desmume.*',
    'ndspy.*',
    'pytesseract.*',
    'zed.*'
]
ignore_missing_imports = true
