[project]
name = "ph_rando"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "PySide6",
    "click",
    "inflection",
    "ndspy@git+https://github.com/mike8699/ndspy.git@9d80480e8a3d65a389aac6f5d10978bd9113c977",
    "ordered-set",
    "pydantic",
    "pyparsing",
    "vidua",
    "zed@git+https://github.com/phst-randomizer/zed.git@e59a9653ea1344cbc147bab446821813200b9d19",
]

[dependency-groups]
dev = [
    "pre-commit",
    "tox",
    "tox-uv",
]
test = [
    "PyYAML",
    "numpy",
    "opencv-python",
    "pytesseract",
    "pytest",
    "pytest-repeat",
    "pytest-rerunfailures",
    "pytest-xdist",
    "tqdm",
]
desmume = [
    "py-desmume",
    "birds-eye-lib@git+https://github.com/SkiHatDuckie/birds-eye.git@662d148c80830e8399e7025ba92fa44da01afa1c",
]
types = [
    "mypy",
    "types-Pillow",
    "types-PyYAML",
    "types-setuptools",
    "types-tqdm",
]
pyinstaller = ["pyinstaller"]

[project.scripts]
ph_rando = "ph_rando.ui.main:main"
ph_rando_shuffler = "ph_rando.shuffler.main:shuffler_cli"
ph_rando_patcher = "ph_rando.patcher.main:patcher_cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["ph_rando"]

[tool.black]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|dist'
line-length = 100
skip-string-normalization = true
target-version = ["py312"]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
line_length = 100
profile = "black"

# Require all Python code to be typed by default.
[tool.mypy]
disallow_untyped_defs = true

# Allow untyped definitions for test code.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# These third-party libraries don't expose type information,
# so we tell mypy not to try to type-check our usage of them.
[[tool.mypy.overrides]]
module = [
    'birdseyelib.*',
    'cv2.*',
    'desmume.*',
    'ndspy.*',
    'pytesseract.*',
    'zed.*'
]
ignore_missing_imports = true
