[metadata]
name = ph_randomizer
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    PySide6==6.4.2
    click==8.1.3
    inflection==0.5.1
    ndspy==4.0.0
    ordered-set==4.1.0
    pydantic==1.10.5
    pyparsing==3.0.9
    vidua==0.4.4
    zed@git+https://github.com/phst-randomizer/zed.git@95ea41d931193eacea782f1b8f812b4f00cba51c
requires_python = >=3.11

[options.entry_points]
console_scripts =
    ph_rando = ph_rando.ui.main:main
    ph_rando_shuffler = ph_rando.shuffler.main:shuffler_cli
    ph_rando_patcher = ph_rando.patcher.main:patcher_cli

[options.extras_require]
test =
    PyYAML~=6.0
    numpy~=1.24.1
    opencv-python~=4.7.0.68
    py-desmume==0.0.5.post0
    pytest~=7.2.0
    pytest-repeat~=0.9.1
    pytest-xdist~=3.2.0
types =
    types-Pillow~=9.4.0.2
    types-setuptools~=67.1.0.0
