[metadata]
name = ph_randomizer
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    PySide6==6.5.2
    PyYAML==6.0.1
    click==8.1.3
    inflection==0.5.1
    ndspy==4.1.0
    ordered-set==4.1.0
    pydantic==1.10.12
    pyparsing==3.1.1
    vidua==0.4.5
    zed@git+https://github.com/phst-randomizer/zed.git@670ebf0f928a6cadbd1823898214cfe8f8289e1a
requires_python = >=3.11

[options.entry_points]
console_scripts =
    ph_rando = ph_rando.ui.main:main
    ph_rando_shuffler = ph_rando.shuffler.main:shuffler_cli
    ph_rando_patcher = ph_rando.patcher.main:patcher_cli

[options.extras_require]
test =
    numpy
    opencv-python
    py-desmume>=0.0.5.post0
    pytest
    pytest-repeat
    pytest-xdist
    tqdm
types =
    mypy==1.4.1
    types-Pillow
    types-PyYAML
    types-setuptools
    types-tqdm
