[metadata]
name = ph_randomizer
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    PySide6==6.5.2
    click==8.1.3
    inflection==0.5.1
    ndspy==4.1.0
    ordered-set==4.1.0
    pydantic==1.10.13
    pyparsing==3.1.1
    vidua==0.4.5
    zed@git+https://github.com/phst-randomizer/zed.git@5ee969236bf3c3d0707da963e5edc818ddf246d3
requires_python = >=3.11

[options.entry_points]
console_scripts =
    ph_rando = ph_rando.ui.main:main
    ph_rando_shuffler = ph_rando.shuffler.main:shuffler_cli
    ph_rando_patcher = ph_rando.patcher.main:patcher_cli

[options.extras_require]
test =
    PyYAML==6.0.1
    numpy~=1.25.2
    opencv-python~=4.8.1.78
    py-desmume==0.0.5.post0
    pytest~=7.4.2
    pytest-repeat~=0.9.1
    pytest-xdist~=3.3.0
    tqdm~=4.66.1
types =
    mypy==1.5.1
    types-Pillow~=9.5.0.1
    types-PyYAML~=6.0.12.8
    types-setuptools~=68.2.0.0
    types-tqdm~=4.66.0.1
